Add swagger documentation markup for wallet mnemonic get/post
